Fix remove button

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -14,10 +14,11 @@ de:
   label_surveys_commentsclick: 'Kommentare anzeigen.'
   label_surveys_commentsfrom: 'Kommentiert von'
   label_surveys_undone: 'Möchtest du diese Umfrage wirklich löschen?'
-  label_surveys_createdby: 'erstellt von'
+  label_surveys_createdby: 'Erstellt von'
   label_surveys_iconresults: 'Resultate'
   label_surveys_icondownload: 'Herunterladen'
   label_surveys_save: 'Speichern'
   label_surveys_saveagain: 'Erneut speichern'
-  label_surveys_changeanswer: ' Du kannst deine Antwort verändern. Bitte speichere diese danach über den "Speichern" Button.'
-  label_surveys_savechanges: ' Bitte speichere deine Änderungen über den "Speichern" Button.'
+  label_surveys_changeanswer: 'Du kannst deine Antwort verändern. Bitte speichere diese danach über den "Speichern" Button.'
+  label_surveys_savechanges: 'Bitte speichere deine Änderungen über den "Speichern" Button.'
+  label_surveys_remove: 'Entfernen'
